# Goblin

./: .gitignore  README.md
core/: Cargo.toml
core/api/: Cargo.toml
core/api/src/: dto.rs  main.rs  routes.rs
core/common/src/: types.rs
core/graph/: Cargo.toml
core/graph/src/: builder.rs  cycles.rs  lib.rs  test_helpers.rs
core/layout/: Cargo.toml
core/layout/src/: annealing.rs  circle.rs  energy.rs  initial.rs  labels.rs  lib.rs  operators.rs  pipeline.rs  preprocess.rs  repair.rs  types.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/diagram/: DiagramEdge.tsx  DiagramLabel.tsx  DiagramStation.tsx  DiagramView.tsx  useManualAnchors.ts
frontend/src/editor/: LineEditor.tsx  LinePanel.tsx  PersistenceBar.tsx  PropertiesPanel.tsx  Toolbar.tsx
frontend/src/map/: MapView.tsx  NetworkOverlay.tsx
frontend/src/store/: layoutStore.ts  networkStore.test.ts  networkStore.ts  pathUtils.test.ts  pathUtils.ts  persistence.test.ts  persistence.ts  uiStore.ts
frontend/src/types/: network.ts
