[workspace]
members = ["common", "graph", "layout", "api"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }
